logo spacing fixed

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header h1 {
   font-size: 35px;
   color: #d04f4f;
   font-weight: 700;
+  margin-top: 1px;
 }
 .section {
   margin-bottom: 25px;
